@@ -9,6 +9,7 @@ For a detailed list of changes, please see ChangeLog.
    - Fix some translation mistakes in the fr help file (LP: #1210552)
    - Fix crash when changing the show secrets setting
    - Mark some more menu entries as translatable
+   - Perform case-insensitive sort on entries and folders
 
 0.27 (2013-08-12)
 
